# LM_system

./: .env.example  Dockerfile  README.md  coverage_results.txt  docker-compose.yaml  groups_data.json  pyproject.toml  requirements.txt  users_data.json
config/: celery.py  qwe.py  settings.py  tasks.py  urls.py
courses/: admin.py  models.py  serializers.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_lesson_video_link.py
groups/: serializer.py  urls.py  views.py
materials/: .serializers.py  .views.py  admin.py  models.py  paginators.py  permissions.py  tests.py  urls.py  utils.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_lesson_video_link.py  0003_alter_course_options_alter_lesson_options.py  0004_alter_course_title.py  0005_alter_course_title.py  0006_course_owner_lesson_owner.py  0007_payment_course.py  0008_rename_payment_course_paymentcourse.py  0009_course_price_paymentcourse_url_payment_course_and_more.py  0010_alter_paymentcourse_id_payment_course.py  0011_alter_paymentcourse_id_payment_course_and_more.py  0012_alter_course_owner_alter_lesson_owner.py
materials/serializers/: courses.py  lessons.py
materials/views/: courses.py  lessons.py
subscription/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
subscription/migrations/: 0001_initial.py
user/: models.py  urls.py
users/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_avatar_and_more.py  0003_payment.py  0006_alter_payment_user.py  (+6 more)
(+3 files in other folders)
